Configured Yarn, Eslint, Prettier

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,8 @@
 yarnPath: ".yarn/releases/yarn-berry.cjs"
+
+pnpMode: loose
+
+packageExtensions:
+  eslint-module-utils@*:
+    dependencies:
+      eslint-import-resolver-node: "*"
