--- a/package.json
+++ b/package.json
@@ -5,16 +5,39 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
+    "prettier:check": "prettier --check --ignore-path ./.eslintignore '**/*.{css,gql,graphql,html,js,jsx,json,md,mdx,ts,tsx,vue,yaml,yml}'",
+    "format": "yarn run format:prettier && yarn run format:eslint",
+    "format:eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx --fix ./src >/dev/null 2>&1 || true",
+    "format:prettier": "prettier --write '**/*.{css,gql,graphql,html,js,jsx,json,md,mdx,ts,tsx,vue,yaml,yml}'"
   },
   "dependencies": {
+    "@yarnpkg/pnpify": "^2.2.1",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "devDependencies": {
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "eslint": "^7.8.1",
+    "eslint-config-airbnb-typescript": "^10.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.3.0",
+    "prettier": "^2.1.1",
     "typescript": "^4.0.2"
   }
 }
