--- a/.eslintignore
+++ b/.eslintignore
@@ -37,3 +37,16 @@ yarn-error.log*
 
 # eslint
 .eslintcache
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
